manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rhdh-app
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
